sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {var x:Int=getValueCount(); var y:Int=0; for (i<-0 to (x-1) {y=i; while (isSmaller(y+1, y)) {swap(y+1,y); if (y>0) {y=y-1}}; y=0}
}